--- a/appspec.yml
+++ b/appspec.yml
@@ -13,4 +13,4 @@ hooks:
   BeforeInstall:
     - location: scripts/install_dependencies
       timeout: 300
-      runas: ec2-user
+      runas: root
